# knowledge-space

./: Makefile  docker-compose.yaml
backend/: manage.py  pyproject.toml
backend/docker/: Dockerfile  docker-entrypoint.sh  startup.sh
backend/fixtures/: data.json
backend/src/: urls.py  wsgi.py
backend/src/apps/accounts/: admin.py  managers.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/src/apps/accounts/migrations/: 0001_initial.py  0002_auto_20210526_1345.py  0003_auto_20210526_1641.py
backend/src/apps/articles/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/src/apps/articles/migrations/: 0001_initial.py  0002_auto_20210526_1351.py  0003_auto_20210526_1641.py
backend/src/settings/components/: __init__.py  common.py
deployment/: Dockerfile
deployment/config/: .env.template
nginx/: nginx.conf
